java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/ExtendsClause.java
class s {
  int i;
  class inn extends <error descr="Class name expected">i</error> {}
}